fix: remove margin from toolbar popover content to prevent text overlapping

--- a/client/components/FormattingBar/controlComponents/controlsReference.scss
+++ b/client/components/FormattingBar/controlComponents/controlsReference.scss
@@ -1,6 +1,7 @@
 .controls-reference-popover-component {
 	max-width: 150px;
 	padding: 12px;
+	margin: 0;
 }
 
 .controls-reference-settings-link {
